valueOf or auto-unbox instead of new
new Double and similar got a removal warning in java-17, do Double.valueOf,
Double.parseDouble and similar for other types.

.editorconfig caused some trimming of trailing whitespaces.

remove boxing